tests/sum-types/ill-typed/bad-sum-types-11.stella
language core;
extend with #sum-types;

fn g(x : Nat + Bool) -> Nat {
  return match x {
      inl(n) => succ(n)
    | inr(bf) => if bf then 0 else inl(bf)
  }
}

fn main(x : Nat) -> Nat {
  return g(inr(false))
}
